manifests/kuard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  # annotations:
  #   kubernetes.io/change-cause: "Update revisionHistoryLimit"
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 3
  # minReadySeconds: 15
  # revisionHistoryLimit: 14
  strategy:
    type: RollingUpdate # Recreate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      restartPolicy: Always # Only allowed values in deployments
      containers:
        - name: kuard
          image: gcr.io/kuar-demo/kuard-arm:1 # :latest
          imagePullPolicy: Always # IfNotPresent
          command:
            - "/kuard"
            - "$(EXTRA_PARAM)"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: "/data"
              name: "kuard-data"
            - name: config-volume
              mountPath: /config
            - name: tls-certs
              mountPath: "/tls"
              readOnly: true
      tolerations: # See https://github.com/kubernetes/kubernetes/issues/74651
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5
      volumes:
        - name: "kuard-data"
          persistentVolumeClaim:
            claimName: kuard-claim
        - name: config-volume
          configMap:
            name: kuard-config
        - name: tls-certs
          secret:
            secretName: kuard-tls
