manifests/kuard/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  containers:
    - name: kuard
      image: gcr.io/kuar-demo/kuard-arm:1
